# Program-Summer

./: README.md
data_fetch/: Cargo.toml  bitcoin.txt  ethereum.txt  sp500.txt
data_fetch/src/: main.rs
module-3/: books.txt
module-3/src/: main.rs
my_project/src/: Assignment1.rs  Module1_Assignment2.rs  Module1_Assignment3.rs  Module2_Assignment1.rs  Module2_Assignment2.rs  main.rs
website-monitor/: Cargo.toml
website-monitor/src/: lib.rs  main.rs
website-monitor/tests/: monitor_tests.rs
