[package]
name = "website-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
httpmock = "0.7"
once_cell = "1.19"
